Finish fixing movie details fetching, delete lists
